--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -54,6 +54,7 @@
 
 					<label for="image">Sube una foto tuya:</label>
 					<input type="file" id="image" alt="image" />
+					<button class="formBtn js_formBtn">Crea tarjeta</button>
 				</form>
 			</section>
 
