--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,8 @@
 // fonts
-$font-main: 'Roboto', sans-serif;
+$font-main: 'Cinzel', serif;
 
 // colors
-$color-bg: #f3f4f5;
-$color-secondary: #999;
+$color-bg: #7F55B1;
+$color-secondary: #F49BAB;
+$color-primary: #9B7EBD;
+$color-emphasis: #FFE1E0;
