--- a/src/scss/layout/_formMain.scss
+++ b/src/scss/layout/_formMain.scss
@@ -3,3 +3,104 @@
 .all {
     display: flex;
 }
+  
+/*Sección del formulario */
+.create {
+    flex: 1;
+    background-color: var(--color-bg);
+    border-radius: 15px;
+    padding: 2rem;
+ }
+  
+  /* Estilos para secciones del formulario */
+  .design, .form, .share {
+    margin-bottom: 2rem;
+  }
+  
+  h2 {
+    color: var(--color-emphasis);
+    margin-bottom: 1rem;
+  }
+  
+  label {
+    display: block;
+    margin-top: 1rem;
+    font-size: 0.9rem;
+  }
+  
+  input, select {
+    width: 100%;
+    padding: 0.5rem;
+    margin-top: 0.3rem;
+    border-radius: 0.5rem;
+    border: none;
+    background: var(--color-primary);
+    color: var(--color-emphasis)
+  }
+  
+  input[type="color"] {
+    padding: 0.2rem;
+    height: 40px;
+  }
+  
+  button.formBtn {
+    margin-top: 1.5rem;
+    padding: 0.7rem 1.5rem;
+    border: none;
+    border-radius: 0.7rem;
+    background: var(--color-secondary);
+    color: var(--color-emphasis);
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 0 10px #ffd700;
+  }
+  
+  /* Sección de previsualización */
+  .preview {
+    flex: 1;
+    background: var(--color-secondary);
+    border-radius: 1rem;
+    padding: 2rem;
+    box-shadow: 0 0 15px #3498db;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .preview__card {
+    background: var(--color-primary);
+    padding: 1.5rem;
+    border-radius: 1rem;
+    width: 100%;
+    text-align: center;
+    border: 2px solid #ffd700;
+    box-shadow: 0 0 10px #9b59b6;
+  }
+  
+  .preview__card p {
+    margin: 0.5rem 0;
+    font-style: italic;
+  }
+  
+  .preview__card img {
+    border-radius: 50%;
+    margin: 1rem auto;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 2px solid #ffd700;
+  }
+  
+  .preview button {
+    margin-top: 2rem;
+    background: #9b59b6;
+    color: #fff;
+    padding: 0.7rem 1.2rem;
+    border: none;
+    border-radius: 0.7rem;
+    cursor: pointer;
+    box-shadow: 0 0 10px #9b59b6;
+  }
+  
+
+  
