--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,23 +1,23 @@
 @use '../core/variables' as vars;
 
+/* Estilo general */
 body {
-    padding: 2rem;
-    height: 100vh;
-
-    font-family: vars.$font-main;
-}
-
-.main__containerIcons {
-    border: 1px solid black;
-    border-radius: 5px;
-    width: fit-content;
-    padding: 5px;
+    font-family: 'Cinzel', serif;
+    background: vars.$color-bg;
+    color: vars.$color-emphasis;
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* Contenedor principal */
+  .all {
     display: flex;
-    gap: 15px;
+    justify-content: space-between;
+    padding: 2rem;
+    gap: 1rem;
+    max-width: 65%;
+  }
 
-    &_element {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
+  /*Previsualización*/
+
+
