--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -1,81 +1,95 @@
 <main class="page__main">
-	<div class="all">
-		<div class="create">
-			<section class="design">
-				<h2>Elige tu diseño:</h2>
+  <div class="all">
+    <div class="create">
+      <section class="design">
+        <div>
+          <h2>Elige tu diseño:</h2>
+          <i class="fa-solid fa-arrow-down"></i>
+        </div>
+        <div class="js_containerDesign">
+          <input type="radio" id="design1" name="elemento" />
+          <label for="design1">Agua (escorpio, piscis, cancer)</label>
 
-				<input type="radio" id="design1" name="elemento" />
-				<label for="design1">Agua (escorpio, piscis, cancer)</label>
+          <input type="radio" id="design2" name="elemento" />
+          <label for="design2">Fuego (sagitario, leo, aries)</label>
 
-				<input type="radio" id="design2" name="elemento" />
-				<label for="design2">Fuego (sagitario, leo, aries)</label>
+          <input type="radio" id="design3" name="elemento" />
+          <label for="design3">Tierra (capricornio, tauro, virgo)</label>
 
-				<input type="radio" id="design3" name="elemento" />
-				<label for="design3">Tierra (capricornio, tauro, virgo)</label>
+          <input type="radio" id="design4" name="elemento" />
+          <label for="design4">Aire (acuario, géminis, libra)</label>
+        </div>
+      </section>
 
-				<input type="radio" id="design4" name="elemento" />
-				<label for="design4">Aire (acuario, géminis, libra)</label>
-			</section>
+      <section class="form">
+        <div>
+          <h2>Rellena:</h2>
+          <i class="fa-solid fa-arrow-down js_headerFill"></i>
+        </div>
+        <div class="js_containerFill">
+          <form action="POST">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" placeholder="Escribe aquí tu nombre" />
 
-			<section class="form">
-				<h2>Rellena:</h2>
-				<form action="POST">
-					<label for="name">Nombre:</label>
-					<input type="text" id="name" placeholder="Escribe aquí tu nombre" />
+            <label for="zodiacSign">Signo:</label>
+            <select id="signo-zodiacal" name="signo-zodiacal">
+              <option value="">Elige tu signo</option>
+              <option value="aries">Aries</option>
+              <option value="tauro">Tauro</option>
+              <option value="geminis">Géminis</option>
+              <option value="cancer">Cáncer</option>
+              <option value="leo">Leo</option>
+              <option value="virgo">Virgo</option>
+              <option value="libra">Libra</option>
+              <option value="escorpio">Escorpio</option>
+              <option value="sagitario">Sagitario</option>
+              <option value="capricornio">Capricornio</option>
+              <option value="acuario">Acuario</option>
+              <option value="piscis">Piscis</option>
+            </select>
 
-					<label for="zodiacSign">Signo:</label>
-					<select id="signo-zodiacal" name="signo-zodiacal">
-						<option value="">Elige tu signo</option>
-						<option value="aries">Aries</option>
-						<option value="tauro">Tauro</option>
-						<option value="geminis">Géminis</option>
-						<option value="cancer">Cáncer</option>
-						<option value="leo">Leo</option>
-						<option value="virgo">Virgo</option>
-						<option value="libra">Libra</option>
-						<option value="escorpio">Escorpio</option>
-						<option value="sagitario">Sagitario</option>
-						<option value="capricornio">Capricornio</option>
-						<option value="acuario">Acuario</option>
-						<option value="piscis">Piscis</option>
-					</select>
+            <label for="color">Elige tu color favorito:</label>
+            <input type="color" id="color" />
 
-					<label for="color">Elige tu color favorito:</label>
-					<input type="color" id="color" />
+            <label for="birthDate">Tu fecha de nacimiento:</label>
+            <input type="date" id="birthDate" />
 
-					<label for="birthDate">Tu fecha de nacimiento:</label>
-					<input type="date" id="birthDate" />
+            <label for="mobileNumber">Escribe tu número de móvil</label>
+            <input type="number" id="mobileNumber" placeholder="123456789" />
 
-					<label for="mobileNumber">Escribe tu número de móvil</label>
-					<input type="number" id="mobileNumber" placeholder="123456789" />
+            <label for="instagram">Tu @ instagram</label>
+            <input type="text" id="instagram" placeholder="@hola" />
 
-					<label for="instagram">Tu @ instagram</label>
-					<input type="text" id="instagram" placeholder="@hola" />
+            <label for="image">Sube una foto tuya:</label>
+            <input type="file" id="image" alt="image" />
+          </form>
+        </div>
+      </section>
 
-					<label for="image">Sube una foto tuya:</label>
-					<input type="file" id="image" alt="image" />
-				</form>
-			</section>
+      <section class="share">
+        <div>
+          <h2>Comparte</h2>
+          <i class="fa-solid fa-arrow-down js_headerShare"></i>
+        </div>
+        <div class="js_containerShare">
+          <button class="formBtn js_formBtn">Crea tarjeta</button>
+        </div>
+      </section>
+    </div>
 
-			<section class="share">
-				<h2>Comparte</h2>
-				<button class="formBtn js_formBtn">Crea tarjeta</button>
-			</section>
-		</div>
-
-		<div class="preview">
-			<section>
-				<h2>Previsualización tarjeta</h2>
-				<div class="preview__card">
-					<p class="js_namePreview">Aquí va el nombre</p>
-					<p class="js_signoPreview">Aquí va el signo</p>
-					<img src="https://placecats.com/100/100" alt="foto" />
-					<p class="js_datePreview">Aquí va la fecha de nacimiento</p>
-					<p class="js_mobilePreview">Aquí va el mobil</p>
-					<p class="js_igPreview">Aquí va @hola</p>
-				</div>
+    <div class="preview">
+      <section>
+        <h2>Previsualización tarjeta</h2>
+        <div class="preview__card">
+          <p class="js_namePreview">Aquí va el nombre</p>
+          <p class="js_signoPreview">Aquí va el signo</p>
+          <img src="https://placecats.com/100/100" alt="foto" />
+          <p class="js_datePreview">Aquí va la fecha de nacimiento</p>
+          <p class="js_mobilePreview">Aquí va el mobil</p>
+          <p class="js_igPreview">Aquí va @hola</p>
+        </div>
         <button>Reset</button>
-			</section>
-		</div>
-	</div>
+      </section>
+    </div>
+  </div>
 </main>
