--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,9 @@
 <footer class="page__footer">
-  <small>
-    &copy; Todos los derechos reservados al team 3 de Adalab PROMO 51
-  </small>
+  <div class="footer__info">
+    <p>© 2025 Team 3 de Adalab PROMO 51. Guiados por las estrellas y los signos del zodiaco. Todos los derechos reservados.</p>
+    </div>
+    
+    <div class="footer__mensaje">
+    <span> Conectando almas bajo las constelaciones del zodiaco </span> 
+    </div>
 </footer>
