--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -2,7 +2,7 @@
 $font-main: 'Cinzel', serif;
 
 // colors
-$color-bg: #7F55B1;
+$color-bg: #7f55b1;
 $color-secondary: #F49BAB;
 $color-primary: #9B7EBD;
 $color-emphasis: #FFE1E0;
