--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -88,7 +88,7 @@
           <p class="js_mobilePreview">Aquí va el mobil</p>
           <p class="js_igPreview">Aquí va @hola</p>
         </div>
-        <button>Reset</button>
+        <button class="reset">Reset</button>
       </section>
     </div>
   </div>
