--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -7,7 +7,7 @@
           <i class="fa-solid fa-arrow-down"></i>
         </div>
         <div class="js_containerDesign collapsed">
-          <input type="radio" id="design1" name="elemento" value="1" />
+          <input type="radio" id="design1" name="elemento" value="1" checked />
           <label for="design1">Agua (escorpio, piscis, cancer)</label>
 
           <input type="radio" id="design2" name="elemento" value="2" />
