--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,12 @@
-<footer class="page__footer">
-  <div class="footer__info">
-    <p>© 2025 Team 3 de Adalab PROMO 51. Guiados por las estrellas y los signos del zodiaco. Todos los derechos reservados.</p>
-    </div>
-    
-    <div class="footer__mensaje">
-    <span> Conectando almas bajo las constelaciones del zodiaco </span> 
-    </div>
+<footer class="footer">
+	<div class="footer__mensaje">
+		<span> Conectando almas bajo las constelaciones del zodiaco. </span>
+	</div>
+
+	<div class="footer__info">
+		<p>
+			© 2025 Team 3 de Adalab PROMO 51. Guiados por las estrellas y los signos
+			del zodiaco. Todos los derechos reservados.
+		</p>
+	</div>
 </footer>
