--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,5 +1,22 @@
 @use '../core/variables' as vars;
 
-.page__footer {
+.footer {
     color: vars.$color-secondary;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding-inline: 20px;
+    padding-bottom: 10px;
+    bottom: 0;
+    
+    &__info {
+        text-align: center;
+        font-size: 12px;
+        font-style: italic;
+    }
+
+    &__mensaje {
+        text-align: center;
+        font-size: 14px;
+    }
 }
