--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,13 +1,19 @@
+<div class="recuadro">
 <main class="page__main">
-  <h2>Aquí podrás crear tu tarjeta</h2>
-  <p>¿Necesitas una tarjeta para tu evento?</br>
-    No te preocupes, ¡aquí tienes la solución!</p>
+  <h2 class="h2_main">Aquí podrás crear tu tarjeta</h2>
+  
+  <div class="p_main">
+  <p>¿🧐Necesitas una tarjeta para tu evento?</p>
+  <p>No te preocupes, ¡aquí tienes la solución!</p>
+  </div>
 
   <div class="main__containerIcons">
     <span class="main__containerIcons_element"><i class="fa-solid fa-palette"></i> Diseña</span>
     <span class="main__containerIcons_element"><i class="fa-solid fa-keyboard"></i>Rellana</span>
     <span class="main__containerIcons_element"><i class="fa-solid fa-share-nodes"></i>Comparte</span>
   </div>
+  <div class="boton_main">
   <a href="../form.html"><button>Crear tarjeta <i class="fa-solid fa-arrow-right"></i></button></a> 
-  
+  </div>
 </main>
+</div>
