--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,23 +1,84 @@
-@use '../core/variables' as vars;
+@use "../core/variables" as vars;
 
 /* Estilo general */
 body {
-    font-family: 'Cinzel', serif;
-    background: vars.$color-bg;
-    color: vars.$color-emphasis;
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* Contenedor principal */
-  .all {
-    display: flex;
-    justify-content: space-between;
-    padding: 2rem;
-    gap: 1rem;
-    max-width: 65%;
-  }
+  font-family: "Cinzel", serif;
+  background: vars.$color-bg;
+  color: vars.$color-emphasis;
+  margin: 0;
+  padding: 0;
+}
 
-  /*Previsualización*/
+/* Contenedor principal */
+.all {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+  gap: 1rem;
+  max-width: 65%;
+}
 
+/*Previsualización*/
 
+/*página principal*/
+.recuadro {
+  border: 2px solid #7f55b1;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 400px;
+  margin: 30px auto;
+  background-color: #9b7ebd;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.h2_main {
+  text-align: center;
+  font-size: 32px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.page__main {
+  padding-top: 10px; /* o más si quieres */
+}
+.p_main {
+  text-align: center;
+  font-size: 22px;
+}
+.p_main p {
+  margin: 10px 0;
+}
+.main__containerIcons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.main__containerIcons_element {
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.main__containerIcons_element i {
+  font-size: 25px;
+  margin-right: 2px;
+  vertical-align: middle;
+}
+.boton_main {
+  text-align: center;
+  margin-top: 30px;
+}
+.boton_main button {
+  font-size: 22px;
+  padding: 12px 30px;
+  color: #7f55b1;
+  cursor: pointer;
+  background-color: #ffe1e0;
+  border: none;
+  border-radius: 6px;
+  transition: background-color 0.3s ease;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
