--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -7,16 +7,16 @@
           <i class="fa-solid fa-arrow-down"></i>
         </div>
         <div class="js_containerDesign collapsed">
-          <input type="radio" id="design1" name="elemento" value="1" checked />
+          <input type="radio" id="design1" name="elemento" value="agua" checked />
           <label for="design1">Agua (escorpio, piscis, cancer)</label>
 
-          <input type="radio" id="design2" name="elemento" value="2" />
+          <input type="radio" id="design2" name="elemento" value="fuego" />
           <label for="design2">Fuego (sagitario, leo, aries)</label>
 
-          <input type="radio" id="design3" name="elemento" value="3" />
+          <input type="radio" id="design3" name="elemento" value="tierra" />
           <label for="design3">Tierra (capricornio, tauro, virgo)</label>
 
-          <input type="radio" id="design4" name="elemento" />
+          <input type="radio" id="design4" name="elemento" value="aire"/>
           <label for="design4">Aire (acuario, géminis, libra)</label>
         </div>
       </section>
@@ -84,7 +84,7 @@
     <div class="preview">
       <section>
         <h2>Previsualización tarjeta</h2>
-        <div class="preview__card">
+        <div class="preview__card js_preview_card">
           <p class="js_namePreview" data-placeholder="Aquí va el nombre">
             Aquí va el nombre
           </p>
@@ -109,7 +109,7 @@
             Aquí va @hola
           </p>
         </div>
-        <button class="js_resetBtn">Reset</button>
+        <button type="button" class="js_resetBtn">Reset</button>
       </section>
     </div>
   </div>
