--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -3,8 +3,8 @@
   <h2 class="h2_main">Aquí podrás crear tu tarjeta</h2>
   
   <div class="p_main">
-  <p>¿🧐Necesitas una tarjeta para tu evento?</p>
-  <p>No te preocupes, ¡aquí tienes la solución!</p>
+  <p>¿🔮 Necesitas una tarjeta zociacal que sea pura magia 🐇?</p>
+  <p>🌙 No te preocupes,✨¡aquí tienes la solución! 🧿 </p>
   </div>
 
   <div class="main__containerIcons">
