--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,5 +1,7 @@
 // fonts
-$font-main: "Cinzel", serif;
+$font-title: "Great Vibes", sans-serif;
+$font-title-alt: "Great Vibes", sans-serif;
+$font-main: "Lora", serif;
 
 // colors
 $color-bg: #7f55b1;
