--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,3 +6,6 @@
 @use 'layout/footer';
 @use 'pages/index';
 @use 'layout/formMain';
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+
+  
