--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,8 +1,17 @@
 @use "../core/variables" as vars;
 
+
 /* Estilo general */
+h1, h2, h3, {
+  font-family: vars.$font-title;
+  font-size: 45px;
+  color: vars.$color-emphasis;
+  margin-block: 10px;
+}
+
 body {
-  font-family: "Cinzel", serif;
+  font-family: vars.$font-main;
+  font-size: 16px;
   background: vars.$color-bg;
   color: vars.$color-emphasis;
   margin: 0;
