--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -2,11 +2,11 @@
   <div class="all">
     <div class="create">
       <section class="design">
-        <div class="js_toggleDesign">
-          <h2>Elige tu diseño:</h2>
+        <div class="js_toggleDesign toggleDesign">
+          <h2>Elige tu diseño: </h2>
           <i class="fa-solid fa-arrow-down"></i>
         </div>
-        <div class="js_containerDesign collapsed">
+        <div class="js_containerDesign collapsed elements" >
           <input type="radio" id="design1" name="elemento" value="agua" checked />
           <label for="design1">Agua (escorpio, piscis, cancer)</label>
 
@@ -22,8 +22,8 @@
       </section>
 
       <section class="form">
-        <div class="js_toggleFill">
-          <h2>Rellena:</h2>
+        <div class="js_toggleFill toggleDesign">
+          <h2>Rellena: </h2>
           <i class="fa-solid fa-arrow-down js_headerFill"></i>
         </div>
         <div class="js_containerFill collapsed">
@@ -71,8 +71,8 @@
       </section>
 
       <section class="share">
-        <div class="js_toggleShare">
-          <h2>Comparte</h2>
+        <div class="js_toggleShare toggleDesign">
+          <h2>Comparte: </h2>
           <i class="fa-solid fa-arrow-down js_headerShare"></i>
         </div>
         <div class="js_containerShare collapsed">
