tipos ahora si que si

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,7 +1,7 @@
 // fonts
-$font-title: "Great Vibes", sans-serif;
-$font-title-alt: "Great Vibes", sans-serif;
-$font-main: "Lora", serif;
+$font-title: 'Ms Madi', cursive;
+$font-body: 'Josefin Sans', sans-serif;
+
 
 // colors
 $color-bg: #7f55b1;
