--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -2,7 +2,7 @@
 
 
 /* Estilo general */
-h1, h2, h3, {
+h1, h2, h3 {
   font-family: vars.$font-title;
   font-size: 45px;
   color: vars.$color-emphasis;
@@ -10,7 +10,7 @@ h1, h2, h3, {
 }
 
 body {
-  font-family: vars.$font-main;
+  font-family: vars.$font-body;
   font-size: 16px;
   background: vars.$color-bg;
   color: vars.$color-emphasis;
