home con fondo y media queries

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -9,7 +9,7 @@
 
   <div class="main__containerIcons">
     <span class="main__containerIcons_element"><i class="fa-solid fa-palette"></i> Diseña</span>
-    <span class="main__containerIcons_element"><i class="fa-solid fa-keyboard"></i>Rellana</span>
+    <span class="main__containerIcons_element"><i class="fa-solid fa-keyboard"></i>Rellena</span>
     <span class="main__containerIcons_element"><i class="fa-solid fa-share-nodes"></i>Comparte</span>
   </div>
   <div class="boton_main">
