--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -3,21 +3,21 @@
     <div class="create">
       <section class="design">
         <div class="js_toggleDesign toggleDesign">
-          <h2>Elige tu diseño: </h2>
+          <h2>Elige tu diseño:</h2>
           <i class="fa-solid fa-arrow-down"></i>
         </div>
-        <div class="js_containerDesign collapsed elements" >
+        <div class="js_containerDesign collapsed elements radio-group">
           <input type="radio" id="design1" name="elemento" value="agua" checked />
-          <label for="design1">Agua (escorpio, piscis, cancer)</label>
+          <label for="design1">Agua (Escorpio, Piscis, Cáncer)</label>
 
           <input type="radio" id="design2" name="elemento" value="fuego" />
-          <label for="design2">Fuego (sagitario, leo, aries)</label>
+          <label for="design2">Fuego (Sagitario, Leo, Aries)</label>
 
-          <input type="radio" id="design3" name="elemento" value="tierra" />
-          <label for="design3">Tierra (capricornio, tauro, virgo)</label>
+          <input type="radio" id="design3" name="elemento" value="tierra" >
+          <label for="design3">Tierra (Capricornio, Tauro, Virgo)</label>
 
           <input type="radio" id="design4" name="elemento" value="aire"/>
-          <label for="design4">Aire (acuario, géminis, libra)</label>
+          <label for="design4">Aire (Acuario, Géminis, Libra)</label>
         </div>
       </section>
 
@@ -28,7 +28,7 @@
         </div>
         <div class="js_containerFill collapsed">
           <form method="POST">
-            <label for="name">Nombre:</label>
+            <label for="name"></label>
             <input type="text" id="name" placeholder="Escribe aquí tu nombre" />
 
             <label for="zodiacSign">Signo:</label>
