boton y div para subir la previsualización de la foto

--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -65,8 +65,9 @@
             <input type="text" id="instagram" placeholder="@hola" />
 
             <div class="input-foto"><label for="foto"></label>
-            <input type="file" id="image" class="js__profile-upload-btn " /></div>
-            <div ><label class="img-sm"  for="image">Sube una foto tuya:</label><div class="js__profile-preview"></div>
+            <div></div><input type="file" id="image" class="js__profile-upload-btn " /></div>
+            <div class="botonfalso"><label class="img-bt"  for="image">Sube una foto tuya:</label></div>
+            <div class="js__profile-preview miniphoto"></div>
 
           </form>
         </div>
