--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -66,8 +66,9 @@
 
             <div class="input-foto"><label for="foto"></label>
             <div></div><input type="file" id="image" class="js__profile-upload-btn " /></div>
-            <div class="botonfalso"><label class="img-bt"  for="image">Sube una foto tuya:</label></div>
+            <div class="paint-photo"><div class="botonfalso"><label class="img-bt"  for="image">Sube una foto tuya:</label></div>
             <div class="js__profile-preview miniphoto"></div>
+          </div>
 
           </form>
         </div>
