colores bordes y cargar imagen

--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -65,9 +65,9 @@
             <input type="text" id="instagram" placeholder="@hola" />
 
             <div class="input-foto"><label for="foto"></label>
-            <div></div><input type="file" id="image" class="js__profile-upload-btn " /></div>
+            <div></div><input type="file" id="image" class="js_image js__profile-upload-btn " /></div>
             <div class="paint-photo"><div class="botonfalso"><label class="img-bt"  for="image">Sube una foto tuya:</label></div>
-            <div class="js__profile-preview miniphoto"></div>
+            <div class="js__profile-preview miniphoto js_preview__cardimg"></div>
           </div>
 
           </form>
