--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -39,15 +39,15 @@
             >
               <option value="">Elige tu signo</option>
               <option value="aries">Aries ♈</option>
-              <option value="tauro">Touro ♉</option>
-              <option value="geminis">Geminis ♊</option>
-              <option value="cancer">Cancer ♋</option>
+              <option value="tauro">Tauro ♉</option>
+              <option value="geminis">Géminis ♊</option>
+              <option value="cancer">Cáncer ♋</option>
               <option value="leo">Leo ♌</option>
               <option value="virgo">Virgo ♍</option>
               <option value="libra">Libra ♎</option>
               <option value="escorpio">Escorpio ♏</option>
               <option value="sagitario">Sagitario ♐</option>
-              <option value="capricornio">Capricórnio ♑</option>
+              <option value="capricornio">Capricornio ♑</option>
               <option value="acuario">Acuario ♒</option>
               <option value="piscis">Piscis ♓</option>
             </select>
@@ -89,26 +89,20 @@
       <section>
         <h2>Previsualización tarjeta</h2>
         <div class="preview__card js_preview_card">
-          <p class="js_namePreview" data-placeholder="Aquí va el nombre">
-            Aquí va el nombre
-          </p>
-          <p class="js_signoPreview" data-placeholder="Aquí va el signo">
-            Aquí va el signo
-          </p>
-          <img
-            class="js_preview__cardimg js__profile-image"
-            src="https://placecats.com/100/100"
-            alt="foto"/>
-          <p class="js_datePreview"
-            data-placeholder="Aquí va la fecha de nacimiento">
-            Aquí va la fecha de nacimiento
-          </p>
-          <p class="js_mobilePreview" data-placeholder="Aquí va el mobil">
-            Aquí va el móvil
-          </p>
-          <p class="js_igPreview" data-placeholder="Aquí va @hola">
-            Aquí va @hola
-          </p>
+
+          <div class="hashtag"> <p class="js_namePreview" data-placeholder="Aquí va el nombre"> 
+          Aquí va el nombre </p></div>
+
+          <div class="hashtag"><p class="js_signoPreview" data-placeholder="Aquí va el signo"> 
+          Aquí va el signo </p></div>
+
+          <img class="js_preview__cardimg js__profile-image" src="https://placecats.com/100/100" alt="foto"/>
+
+          <div class="hashtag"><p class="js_datePreview" data-placeholder="Aquí va la fecha de nacimiento"> Aquí va la fecha de nacimiento</p></div>
+
+          <div class="hashtag"><p class="js_mobilePreview" data-placeholder="Aquí va el mobil"> Aquí va el móvil</p></div>
+          <div class="hashtag"><p class="js_igPreview" data-placeholder="Aquí va @hola"> Aquí va @hola</p></div>
+
         </div>
         <button type="button" class="js_resetBtn">Reset</button>
       </section>
