--- a/src/scss/layout/_formMain.scss
+++ b/src/scss/layout/_formMain.scss
@@ -185,7 +185,17 @@
     font-style: vars.$font-title;
     font-size: 20px;
     color: white;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.9);
+    
+  }
+
+  .hashtag {
+    background-color: rgba(121, 79, 157, 0.8);
+    color: white;
+    padding-inline: 5px;
+    padding-block: 0.2px;
+    border-radius: 10px;
+    margin-block:4px;
+    
   }
   
   .preview__card img {
@@ -219,6 +229,7 @@
     box-shadow: 0 0 100px #9b59b6;
   }
 
+  
  
 
   .js_preview_card.agua {
