nueva pagina cards y nuevo JS

--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -81,7 +81,7 @@
         </div>
         <div class="js_containerShare collapsed">
           <button class="formBtn js_formBtn">Crea tarjeta</button>
-          <a class="ViewBtn js_viewBtn">Ver tarjeta </a>
+          <a class="ViewBtn js_viewBtn"> </a>
         </div>
       </section>
     </div>
