--- a/src/partials/formMain.html
+++ b/src/partials/formMain.html
@@ -35,8 +35,7 @@
             <select
               id="signo-zodiacal"
               name="signo-zodiacal"
-              class="js_signo-zodiacal"
-            >
+              class="js_signo-zodiacal">
               <option value="">Elige tu signo</option>
               <option value="aries">Aries ♈</option>
               <option value="tauro">Tauro ♉</option>
@@ -69,7 +68,6 @@
             <div class="paint-photo"><div class="botonfalso"><label class="img-bt"  for="image">Sube una foto tuya:</label></div>
             <div class="js__profile-preview miniphoto js_preview__cardimg"></div>
           </div>
-
           </form>
         </div>
       </section>
@@ -90,20 +88,14 @@
       <section>
         <h2>Previsualización tarjeta</h2>
         <div class="preview__card js_preview_card">
-
-          <div class="hashtag"> <p class="js_namePreview" data-placeholder="Aquí va el nombre"> 
-          Aquí va el nombre </p></div>
-
-          <div class="hashtag"><p class="js_signoPreview" data-placeholder="Aquí va el signo"> 
-          Aquí va el signo </p></div>
-
-          <img class="js_preview__cardimg js__profile-image" src="https://placecats.com/100/100" alt="foto"/>
-
-          <div class="hashtag"><p class="js_datePreview" data-placeholder="Aquí va la fecha de nacimiento"> Aquí va la fecha de nacimiento</p></div>
-
-          <div class="hashtag"><p class="js_mobilePreview" data-placeholder="Aquí va el mobil"> Aquí va el móvil</p></div>
-          <div class="hashtag"><p class="js_igPreview" data-placeholder="Aquí va @hola"> Aquí va @hola</p></div>
-
+          <p class="js_namePreview" data-placeholder="Aquí va el nombre"> 
+          Aquí va el nombre </p>
+          <p class="js_signoPreview" data-placeholder="Aquí va el signo"> 
+          Aquí va el signo </p>
+          <img class="js_preview__cardimg js__profile-image" src="https://placecats.com/100/100" alt="foto">
+          <p class="js_datePreview" data-placeholder="Aquí va la fecha de nacimiento"> Aquí va la fecha de nacimiento</p>
+          <p class="js_mobilePreview" data-placeholder="Aquí va el mobil"> Aquí va el móvil</p>
+          <p class="js_igPreview" data-placeholder="Aquí va @hola"> Aquí va @hola</p>
         </div>
         <button type="button" class="js_resetBtn">Reset</button>
       </section>
