--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -13,7 +13,6 @@
     <span class="main__containerIcons_element"><i class="fa-solid fa-share-nodes"></i>Comparte</span>
   </div>
   <div class="boton_main">
-  <a href="../form.html"><button>Crear tarjeta <i class="fa-solid fa-arrow-right"></i></button></a> 
-  </div>
+    <a href="./form.html"><button>Crear tarjeta <i class="fa-solid fa-arrow-right"></i></button></a>
 </main>
 </div>
