--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -137,7 +137,7 @@ body {
   border:2px;
   overflow: hidden;
   display: inline-block;
-  background-size: contain;
+  background-size: cover;
 }
 
 .nombre{
